package nl.aylin.gameoflife.clock;

public interface TickListener {
    void onTick(long tickNumber);
}

