package nl.aylin.gameoflife.ui;

public enum ToolMode {
    PLACE_CONWAY,
    PLACE_ALTERNATIVE,
    REMOVE
}

